fixed spacing of offline

--- a/tcb/assets/sass/custom.scss
+++ b/tcb/assets/sass/custom.scss
@@ -291,7 +291,7 @@ dark-mode-toggle {
 .ready-offline-footer {
     position: fixed;
     bottom: 0px;
-    right: 10px;
+    right: 5px;
     font-size: 12px;
     display: flex;
     align-items: center;
